force-app/main/default/objects/Notes__c/fields/Contact_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contact_Duration__c</fullName>
    <label>Contact Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>