force-app/main/default/objects/Notes__c/fields/Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contact_Purpose__c</fullName>
    <label>Contact Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Affidavit of Disclosure</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Case Closure</fullName>
            </value>
            <value>
                <fullName>Case Consultation</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Case Monitoring</fullName>
            </value>
            <value>
                <fullName>Case Plan/Review</fullName>
            </value>
            <value>
                <fullName>Case Staffing</fullName>
            </value>
            <value>
                <fullName>Case Transfers</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Corrective Action Plan</fullName>
            </value>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>CPS</fullName>
            </value>
            <value>
                <fullName>Crisis Intervention</fullName>
            </value>
            <value>
                <fullName>Database/Internet search</fullName>
            </value>
            <value>
                <fullName>Day Care Assessment</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Family Assessment</fullName>
            </value>
            <value>
                <fullName>Family Team Meeting</fullName>
            </value>
            <value>
                <fullName>FIM-After Removal</fullName>
            </value>
            <value>
                <fullName>FIM-Case transfers</fullName>
            </value>
            <value>
                <fullName>FIM-Disruption</fullName>
            </value>
            <value>
                <fullName>FIM-Emergency Placement change</fullName>
            </value>
            <value>
                <fullName>FIM-Permanency changes</fullName>
            </value>
            <value>
                <fullName>FIM-Planned Placement Change</fullName>
            </value>
            <value>
                <fullName>FIM-Planned Removal/ Considered removal</fullName>
            </value>
            <value>
                <fullName>FIM-Prior to Removal/Considered removal</fullName>
            </value>
            <value>
                <fullName>FIM-Visitation Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>