force-app/main/default/objects/Notes__c/fields/Describe_a_the_child_s_adjustment__c.field-meta.xml
<CustomField>
    <fullName>Describe_a_the_child_s_adjustment__c</fullName>
    <label>Describe (a) the child&apos;s adjustment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>