force-app/main/default/objects/Notes__c/fields/Describe_child_s_adjustment_to_foster__c.field-meta.xml
<CustomField>
    <fullName>Describe_child_s_adjustment_to_foster__c</fullName>
    <label>Describe child&apos;s adjustment to foster</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>