force-app/main/default/objects/Notes__c/fields/Describe_the_quality_of_care__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_quality_of_care__c</fullName>
    <label>Describe the quality of care</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>