force-app/main/default/objects/Notes__c/fields/Involved_Persons_txt__c.field-meta.xml
<CustomField>
    <fullName>Involved_Persons_txt__c</fullName>
    <label>Involved Persons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>