force-app/main/default/objects/Notes__c/fields/Time_diff__c.field-meta.xml
<CustomField>
    <fullName>Time_diff__c</fullName>
    <formula>((End_Time__c - Start_Time__c)/3600000)*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>